# codexjarvis

./: .gitignore  Dockerfile  IMPLEMENTATION_STATUS.md  MASTER_PLAN.md  MEMORY_POLICY.md  PHASE1_SETUP_CHECKLIST.md  README.md  SYSTEM_CONSTITUTION.md  docker-compose.yml  pyproject.toml
contracts/: evidence_bundle.schema.json  task_request.schema.json
examples/data/markets/: demo_prices.csv
examples/tasks/: generic_research_task.json  generic_sum_task.json  generic_timeout_task.json  generic_truth_block_task.json  markets_backtest_task.json
scripts/: bootstrap.ps1  bootstrap.sh  smoke.ps1  smoke.sh
src/jarvis/: __init__.py  cli.py  constants.py  contracts.py  execution.py  hashing.py  memory_db.py  orchestrator.py  queue_db.py  research.py  run_store.py  simulator.py  truth_layer.py
tests/: test_audit.py  test_batch.py  test_cache_tools.py  test_cli_quick.py  test_contracts.py  test_dashboard.py  test_doctor.py  test_execution.py  test_export.py  test_hashing.py  test_import.py  test_markets_engine.py  test_memory_db.py  test_memory_search.py  test_migrate.py  test_mission.py  test_mission_get.py  test_mission_queue.py  test_mission_watch.py  test_queue.py  test_quick.py  test_research.py  test_runs_list.py  test_task_validate.py  test_trace.py  test_truth_layer.py
