[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codexjarvis"
version = "0.1.0"
description = "Local-first evidence-first agentic runtime scaffold."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Tomino + Codex" }
]
dependencies = []

[project.scripts]
jarvis = "jarvis.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
